--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,17 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
-    android:orientation="vertical">
-    <com.androidplot.xy.XYPlot
-        android:id="@+id/accelPlot"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        title="Accelerometer History"
-        />
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="de.uni_weimar.benike.test1.MainActivity">
 
-    <SeekBar
+    <android.support.v4.view.ViewPager
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/sampleRateSeekBar"
-        android:layout_weight="1"
-        android:mirrorForRtl="false"
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:progress="20" />
-
-</LinearLayout>
+        android:layout_height="match_parent"
+         />
+    <!-- app:layout_behavior="@string/appbar_scrolling_view_behavior" -->
+</android.support.design.widget.CoordinatorLayout>
