changed styles of plots minor fixes

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -27,7 +27,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 title="Accelerometer History"
-                />
+                style="@style/mis_chart.Light" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -67,7 +67,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 title="Accelerometer History"
-                />
+                style="@style/mis_chart.Light" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -80,7 +80,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Sample rate"
+                    android:text="Window size"
                     android:id="@+id/textView2" />
 
                 <SeekBar
