--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             title="Accelerometer History"
-            />
+            style="@style/mis_chart.Light" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -52,7 +52,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             title="Accelerometer History"
-            />
+            style="@style/mis_chart.Light" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Window size"
-                android:id="@+id/textView2" />
+                android:id="@+id/windowSizeTextView" />
 
             <SeekBar
                 android:layout_width="match_parent"
@@ -75,6 +75,7 @@
                 android:mirrorForRtl="false"
                 android:progress="5"
                 android:max="16" />
+
         </LinearLayout>
 
     </LinearLayout>
